[package]
name = "botanika-rewards"
version = "0.1.0"
description = "Botanika Rewards Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "botanika_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
botanika-common = { path = "../common" }
